[package]
name = "iceberg-rust-examples"
version = "0.1.0"
edition = "2021"
description = "Apache Iceberg Rust examples demonstrating schema, types, and catalog operations"
license = "Apache-2.0"

[dependencies]
iceberg = "0.9.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
arrow-array = "57"
arrow-cast = { version = "57", features = ["prettyprint"] }
futures = "0.3"
