[package]
name = "iceberg-rust-examples"
version = "0.1.0"
edition = "2021"
description = "Apache Iceberg Rust examples demonstrating schema, types, and catalog operations"
license = "Apache-2.0"

[dependencies]
iceberg = "0.9.0"
iceberg-datafusion = "0.9.0"
datafusion = "52"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3"
